<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profileScroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="vertical"
    tools:context=".ui.match.MatchFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Space
             android:layout_height="30dp"
             android:layout_width="30dp"
            />


        <!-- Vorname -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/firstNameText"
                style="@style/TextField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/first_name_hint"
                android:focusable="false"
                android:clickable="false"
                android:cursorVisible="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.8" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Nachname -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lastNameText"
                style="@style/TextField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/last_name_hint"
                android:focusable="false"
                android:clickable="false"
                android:cursorVisible="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.8" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Alter -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/ageField"
                style="@style/TextField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/age_hint"
                android:focusable="false"
                android:clickable="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.8" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Beschreibung -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/descriptionField"
                style="@style/TextField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="80dp"
                android:gravity="start|top"
                android:hint="@string/description_hint"
                android:focusable="false"
                android:clickable="false"
                android:cursorVisible="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.8" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Map / Koordinaten -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/mapFieldContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.8">

                <TextView
                    android:id="@+id/mapBackground"
                    style="@style/TextField"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="start|top"
                    android:hint="Where they want to go"
                    android:focusable="false"
                    android:clickable="false" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="10dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/latitudeField"
                        style="@style/TextField"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:maxLines="1"
                        android:layout_weight="1"
                        android:hint="@string/latitude_hint"
                        android:focusable="false"
                        android:clickable="false" />

                    <Space
                        android:layout_width="15dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/longitudeField"
                        style="@style/TextField"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:maxLines="1"
                        android:layout_weight="1"
                        android:hint="@string/longitude_hint"
                        android:focusable="false"
                        android:clickable="false" />
                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:layout_marginHorizontal="11dp"
                    android:layout_marginTop="110dp"
                    android:layout_marginBottom="15dp"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="4dp">

                    <com.extremelygood.abfahrt.ui.NonInterceptingMapView
                        android:id="@+id/mapView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:nestedScrollingEnabled="false" />
                </androidx.cardview.widget.CardView>

            </FrameLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="100dp" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
